inżynieria ontologii - struktura w oparciu o slajdy Pawła Garbacz
Signed-off-by: Robert Trypuz <trypuz@kul.pl>

--- a/data_science/data_science_intro.ipynb
+++ b/data_science/data_science_intro.ipynb
@@ -112,6 +112,25 @@
     "\n",
     "-> Wizualizacja"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4d65f66",
+   "metadata": {},
+   "source": [
+    "## Bibliografia\n",
+    "\n",
+    "- Joel Grus, Data Science from Scratch, 2nd Edition, 2019\n",
+    "- [DeepLearning.ai](https://www.deeplearning.ai/courses/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f2f2efb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
