ścieżki do plików
Signed-off-by: Robert Trypuz <trypuz@kul.pl>

--- a/sieci semantyczne/inzynieria_ontologii.ipynb
+++ b/sieci semantyczne/inzynieria_ontologii.ipynb
@@ -843,7 +843,7 @@
     "Ontologia po raz pierwszy\n",
     "\n",
     "![Strona tytułowa *Ogdoas Scholastica* Jakoba Lorharda (pobrana z\n",
-    "<a href=\"www.ontology.co\" class=\"uri\">www.ontology.co</a>)](attachment:lorhard.jpg)\n",
+    "<a href=\"www.ontology.co\" class=\"uri\">www.ontology.co</a>)](img/lorhard.jpg)\n",
     "\n",
     "\"Pierwsza\" definicja ontologii\n",
     "\n",
@@ -867,11 +867,11 @@
     "\n",
     "Lorharda klasyfikacja bytów (2)\n",
     "\n",
-    "![image](attachment:lorhardTax.jpg)\n",
+    "![image](img/lorhardTax.jpg)\n",
     "\n",
     "Gottfried W. Leibniz\n",
     "\n",
-    "![Gottfried W. Leibniz (1646-1716)](attachment:Leibniz.jpg)\n",
+    "![Gottfried W. Leibniz (1646-1716)](img/Leibniz.jpg)\n",
     "\n",
     "G. W. Leibniza koncepcja substancji\n",
     "\n",
@@ -919,7 +919,7 @@
     "\n",
     "Christian Wolff\n",
     "\n",
-    "![Christian Wolff (1679-1754)](attachment:Wolff.jpg)\n",
+    "![Christian Wolff (1679-1754)](img/Wolff.jpg)\n",
     "\n",
     "Koncepcja bytu Ch. Wolffa\n",
     "\n",
@@ -962,7 +962,7 @@
     "\n",
     "Bernard Bolzano\n",
     "\n",
-    "![Bernard Bolzano (1781-1848)](attachment:Bolzano.jpg)\n",
+    "![Bernard Bolzano (1781-1848)](img/Bolzano.jpg)\n",
     "\n",
     "Taksonomia bytów B. Bolzany\n",
     "\n",
@@ -980,11 +980,11 @@
     "\n",
     "Koncepcja bytów nierzeczywistych B. Bolzano\n",
     "\n",
-    "![image](attachment:BolzanoIdee.jpg)\n",
+    "![image](img/BolzanoIdee.jpg)\n",
     "\n",
     "Edmund Husserl\n",
     "\n",
-    "![Edmund Husserl (1859-1938)](attachment:Husserl.jpg)\n",
+    "![Edmund Husserl (1859-1938)](img/Husserl.jpg)\n",
     "\n",
     "Podział ontologii E. Husserla\n",
     "\n",
@@ -1022,7 +1022,7 @@
     "\n",
     "Roman Ingarden\n",
     "\n",
-    "![Roman Ingarden (1893-1970)](attachment:Ingarden.jpg)\n",
+    "![Roman Ingarden (1893-1970)](img/Ingarden.jpg)\n",
     "\n",
     "Ingardenowska definicja ontologii\n",
     "\n",
@@ -1165,11 +1165,11 @@
     "\n",
     "Potrzeba analizy ontologicznej - przykład pierwszy (2)\n",
     "\n",
-    "![image](attachment:DB1.jpg)\n",
+    "![image](img/DB1.jpg)\n",
     "\n",
-    "![image](attachment:DB2.jpg)\n",
+    "![image](img/DB2.jpg)\n",
     "\n",
-    "![image](attachment:DB3.jpg)\n",
+    "![image](img/DB3.jpg)\n",
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi\n",
     "\n",
@@ -1193,15 +1193,15 @@
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (2)\n",
     "\n",
-    "![Architektura systemu JTADIS ](attachment:JTADIS.jpg)\n",
+    "![Architektura systemu JTADIS ](img/JTADIS.jpg)\n",
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (3)\n",
     "\n",
-    "![Idea modułu SIE ](attachment:SIE.jpg)\n",
+    "![Idea modułu SIE ](img/SIE.jpg)\n",
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (4)\n",
     "\n",
-    "![Struktura ACM typu CIRCLE](attachment:ACM.jpg)\n",
+    "![Struktura ACM typu CIRCLE](img/ACM.jpg)\n",
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (5) …  \n",
     "ACMID/ACM:ROZ/NAME:ROZ1/CIRCLE/LATS:240115N0555342E/15.0KM//\n",
@@ -1210,19 +1210,19 @@
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (6)\n",
     "\n",
-    "![ACM “ROZ1”](attachment:ACM_Ex.jpg)\n",
+    "![ACM “ROZ1”](img/ACM_Ex.jpg)\n",
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (7)\n",
     "\n",
-    "![Interpretacja ontologiczna ROZ1](attachment:ACM_Int_1.jpg)\n",
+    "![Interpretacja ontologiczna ROZ1](img/ACM_Int_1.jpg)\n",
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (8)\n",
     "\n",
-    "![Interpretacja ontologiczna ROZ1](attachment:ACM_Int_2.jpg)\n",
+    "![Interpretacja ontologiczna ROZ1](img/ACM_Int_2.jpg)\n",
     "\n",
     "Potrzeba analizy ontologicznej - przykład drugi (9)\n",
     "\n",
-    "![Interpretacja ontologiczna ROZ1](attachment:ACM_Int_3.jpg)"
+    "![Interpretacja ontologiczna ROZ1](img/ACM_Int_3.jpg)"
    ]
   },
   {
@@ -1466,12 +1466,12 @@
     "\n",
     "Sieć Semantyczna a ontologia inżynieryjna (2)\n",
     "\n",
-    "![Rysunek z ](attachment:SemanticWeb.jpg)\n",
+    "![Rysunek z ](img/SemanticWeb.jpg)\n",
     "\n",
     "Spektrum ontologii inżynieryjnych\n",
     "\n",
     "![Diagram L. Obrsta z Mitre Corporation z\n",
-    "<a href=\"www.mkbergman.com\" class=\"uri\">www.mkbergman.com</a>](attachment:SS.jpg)\n",
+    "<a href=\"www.mkbergman.com\" class=\"uri\">www.mkbergman.com</a>](img/SS.jpg)\n",
     "\n",
     "Typologia ontologii inżynieryjnych\n",
     "\n",
@@ -1591,15 +1591,15 @@
     "\n",
     "Rzut oka na strukturę Cyc\n",
     "\n",
-    "![image](attachment:kbase.png)\n",
+    "![image](img/kbase.png)\n",
     "\n",
     "“Góra” mikroteorii BaseKB\n",
     "\n",
-    "![Kategorie ontologiczne Cyc](attachment:Cyc.jpg)\n",
+    "![Kategorie ontologiczne Cyc](img/Cyc.jpg)\n",
     "\n",
     "Co OpenCyc wie o Lublinie?\n",
     "\n",
-    "![Co to jest Lublin?](attachment:Lublin.jpg)\n",
+    "![Co to jest Lublin?](img/Lublin.jpg)\n",
     "\n",
     "<http://umbel.org/> [Otwórz graf wiedzy UMBEL](run:umbel.pdf)\n",
     "\n",
@@ -1639,7 +1639,7 @@
     "DOLCE – *helicopter view*\n",
     "\n",
     "<figure>\n",
-    "<embed src=\"attachment:dolce-eps-converted-to.pdf\" id=\"fig:dolce\" />\n",
+    "<embed src=\"img/dolce-eps-converted-to.pdf\" id=\"fig:dolce\" />\n",
     "<figcaption aria-hidden=\"true\">Taksonomia DOLCE</figcaption>\n",
     "</figure>\n",
     "\n",
@@ -1810,12 +1810,12 @@
     "\n",
     "BFO – klasyfikacja Continuant\n",
     "\n",
-    "![image](attachment:BFO_Continuants.jpg) <span id=\"fig:dolce\"\n",
+    "![image](img/BFO_Continuants.jpg) <span id=\"fig:dolce\"\n",
     "label=\"fig:dolce\"></span>\n",
     "\n",
     "BFO – klasyfikacja Occurent\n",
     "\n",
-    "![image](attachment:BFO_Occurents.jpg) <span id=\"fig:dolce\"\n",
+    "![image](img/BFO_Occurents.jpg) <span id=\"fig:dolce\"\n",
     "label=\"fig:dolce\"></span>\n",
     "\n",
     "<http://bioportal.bioontology.org>\n",
@@ -1991,7 +1991,7 @@
     "\n",
     "Grupy kategorii CIDOC CRM\n",
     "\n",
-    "![image](attachment:CIDOC.pdf)\n",
+    "![image](img/CIDOC.pdf)\n",
     "\n",
     "Wybrane kategorie CIDOC CRM\n",
     "\n",
@@ -2343,7 +2343,7 @@
     "\n",
     "Struktura zbioru czasowników synsetów\n",
     "\n",
-    "![image](attachment:wordnet-impl-lek.eps)\n",
+    "![image](img/wordnet-impl-lek.eps)\n",
     "\n",
     "Grupy synsetów czasowników\n",
     "\n",
@@ -2388,7 +2388,7 @@
     "\n",
     "Struktura zbioru czasowników synsetów\n",
     "\n",
-    "![image](attachment:wordnet-przymiotniki.eps)\n",
+    "![image](img/wordnet-przymiotniki.eps)\n",
     "\n",
     "Typy przymiotników synsetów\n",
     "\n",
