--- a/sieci semantyczne/SPARQL.ipynb
+++ b/sieci semantyczne/SPARQL.ipynb
@@ -10,11 +10,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a870fe-f381-46ca-9089-31eb6f13bdfb",
+   "id": "bacd6609",
    "metadata": {},
    "source": [
-    "SPARQL\n",
-    "\n",
     "-   SPARQL Protocol and RDF Query Language\n",
     "\n",
     "-   W3C standard do przeszukiwania zasobów danych typu RDF\n",
@@ -69,7 +67,15 @@
     "\n",
     "4.  **wzór wyszukiwania**\n",
     "\n",
-    "5.  modyfikacje (wyników) zapytania\n",
+    "5.  modyfikacje (wyników) zapytania"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9a870fe-f381-46ca-9089-31eb6f13bdfb",
+   "metadata": {},
+   "source": [
+    "## Przykłady\n",
     "\n",
     "Przykład zapytania SPARQL\n",
     "\n",
@@ -335,14 +341,12 @@
     "    {\n",
     "    ?unit a dbo:MilitaryUnit .\n",
     "    ?unit dbo:aircraftFighter|dbo:aircraftBomber ?aircraft\n",
-    "    }\n",
-    "\n",
-    "Bibliografia"
+    "    }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "id": "fd740268",
    "metadata": {},
    "outputs": [
@@ -351,9 +355,9 @@
      "output_type": "stream",
      "text": [
       "Requirement already satisfied: rdflib in /Users/roberttrypuz/miniforge3/envs/python38-demo-v1/lib/python3.8/site-packages (6.0.2)\r\n",
-      "Requirement already satisfied: pyparsing in /Users/roberttrypuz/miniforge3/envs/python38-demo-v1/lib/python3.8/site-packages (from rdflib) (2.4.7)\r\n",
       "Requirement already satisfied: setuptools in /Users/roberttrypuz/miniforge3/envs/python38-demo-v1/lib/python3.8/site-packages (from rdflib) (49.6.0.post20210108)\r\n",
       "Requirement already satisfied: isodate in /Users/roberttrypuz/miniforge3/envs/python38-demo-v1/lib/python3.8/site-packages (from rdflib) (0.6.0)\r\n",
+      "Requirement already satisfied: pyparsing in /Users/roberttrypuz/miniforge3/envs/python38-demo-v1/lib/python3.8/site-packages (from rdflib) (2.4.7)\r\n",
       "Requirement already satisfied: six in /Users/roberttrypuz/miniforge3/envs/python38-demo-v1/lib/python3.8/site-packages (from isodate->rdflib) (1.15.0)\r\n"
      ]
     }
@@ -408,9 +412,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1ed70bbf",
+   "metadata": {},
+   "source": [
+    "## Wprawki\n",
+    "\n",
+    "### Wprawki A\n",
+    "\n",
+    "Znajdź 1000 piosenkarzy!\n",
+    "Znajdź wszystkich papieży!\n",
+    "Znajdź wszystkie rodzaje winogron!\n",
+    "Jakie jest IRI Uniwersytetu Gdańskiego (w zasobach dbpedii)?\n",
+    "Znajdź wszystkich morderców!\n",
+    "Znajdź 5 seryjnych morderców!\n",
+    "Znajdź wszystkie planety!\n",
+    "Znajdź wszystkie festiwale muzyczne!\n",
+    "Znajdź wszystkich psychologów!\n",
+    "Znajdź 100 parti politycznych!\n",
+    "Znajdź wszyskie ideologie!\n",
+    "Znajdź 1000 stacji radiowych!\n",
+    "Jakie jest IRI Zamku Królewskiego na Wawelu (w zasobach dbpedii)?\n",
+    "\n",
+    "### Wprawki B\n",
+    "\n",
+    "Znajdź wszystkich historyków, którzy urodzili się w Warszawie!\n",
+    "Znajdź wszystkich morderców lub seryjnych morderców!\n",
+    "Znajdź wszystkie osoby, które zmarły w Berlinie!\n",
+    "Jakie instytucje mają słowo \"veritas\" w swoim motto?\n",
+    "Znajdź 1000 swoich imienników!\n",
+    "Znajdź wszystkich filozofów, którzy urodzili się w Paryżu!\n",
+    "Znajdź wszystkich filozofów, którzy zmarli w Londynie!\n",
+    "Znajdź wszyskie zaćmienia Słońca!\n",
+    "Znajdź wszystkie stacje radiowe w Londynie!\n",
+    "Znajdź wszystkich polityków, którzy byli prezydentami!\n",
+    "Znajdź wszystkie osoby, które mają ten sam kolor włosów, co Ty!\n",
+    "Znajdź wszystkie osoby, które mają ten sam kolor oczu, co Ty!\n",
+    "\n",
+    "\n",
+    "### Wprawki C\n",
+    "\n",
+    "Znajdź wszystkich morderców lub seryjnych morderców, który urodzili się w Berlinie!\n",
+    "Kto urodził się i zmarł w tej samej miejscowości?\n",
+    "Znajdź 1000 osób, które nie miały dzieci!\n",
+    "Znajdź wszystkie osoby, które są, w/g dbpedii, swoimi własnymi dziećmi!\n",
+    "Znajdź wszystkie osoby, które, w/g dbpedii, urodziły się wcześniej niż umarły!\n",
+    "Znajdź wszystkie osoby, które zmarły w Berlinie lub w Paryżu!\n",
+    "Znajdź wszystkie osoby, które urodziły się w Paryżu, a zmarły w Berlinie!\n",
+    "Znajdź wszystkie osoby, które urodziły się w Berlinie, a zmarły w Paryżu!\n",
+    "Znajdź wszystkie osoby, które mają czarne włosy i czarne oczy!\n",
+    "Znajdź wszystkie partie polityczne powstałe w Hiszpanii!\n",
+    "Znajdź wszystkie stacje radiowe, które nadają w Europie!\n",
+    "Znajdź wszystkich właścicieli Zamku Królewskiego na Wawelu!\n",
+    "Znajdź wszystkich polityków, którzy nie byli prezydentami!\n",
+    "Znajdź wszystkich prezydentami, którzy nie byli politykami!\n",
+    "Znajdź wszystkich absolwentów KUL!\n",
+    "Znajdź wszystkich członków Platformy Obywatelskiej!\n",
+    "Znajdź wszystkie osoby, które są, w/g dbpedii, swoimi własnymi małżonkami!\n",
+    "Znajdź wszystkich niemieckich odkrywców!\n",
+    "\n",
+    "\n",
+    "### Wprawki D\n",
+    "\n",
+    "Znajdź wszystkie osoby o wzroście powyżej 2 m.\n",
+    "Znajdź wszystkie partie polityczne powstałe po 2000 r.!\n",
+    "Znajdź wszystkie osoby o wzroście poniżej 1 m.\n",
+    "Znajdź wszystkie osoby, które urodziły się w tym samym dniu, co Ty!\n",
+    "Znajdź wszystkich członków PZPR!\n",
+    "Znajdź wszystkie firmy, których przychód netto jest większy niż 1000000000 (w USD)!\n",
+    "Znajdź wszystkie recenzowane czasopisma akademickie!\n",
+    "Znajdź wszystkie nierecenzowane czasopisma akademickie!\n",
+    "Jakie edukacyjne instytucje kształcą mniej niż 10 studentów (na studiach magisterskich)?\n",
+    "Jakie edukacyjne instytucje kształcą więcej niż 1000 studentów (na studiach doktoranckich)?\n",
+    "Znajdź wszystkie hotele, które mają tyle samo pokoi, co apartamentów (suites)!\n",
+    "\n",
+    "### Wprawki E\n",
+    "\n",
+    "Znajdź wszystkie niefilozoficzne artykuły poświęcone Testowi Turinga?\n",
+    "Znajdź wszystkie artykuły poświęcone Testowi Turinga spoza dziedziny informatyki?\n",
+    "W którym roku opublikowano najwięcej artykułów poświęconych testowi Turinga?\n",
+    "W którym roku opublikowano najmniej artykułów poświęconych testowi Turinga?\n",
+    "W którym roku opublikowano najwięcej artykułów poświęconych ontologii?\n",
+    "W którym roku opublikowano najmniej artykułów poświęconych ontologii?\n",
+    "W którym roku opublikowano najwięcej artykułów poświęconych RDF?\n",
+    "W którym roku opublikowano najmniej artykułów poświęconych RDFS?\n",
+    "W którym roku opublikowano pierwszą publikację poświęconą RDFS?\n",
+    "\n",
+    "\n",
+    "### Wprawki F\n",
+    "\n",
+    "Znajdź artykuły poświęcone ontologii, ale nie RDFS!\n",
+    "Znajdź artykuły poświęcone RDFS, ale nie ontologii!\n",
+    "Znajdź artykuły poświęcone dbpedii napisane w Polsce?\n",
+    "Ile książek opublikowano o dbpedii?\n",
+    "W ilu językach publikowano w dbpedii?\n",
+    "Gdzie opublikowano więcej artykułów o dbpedii: w Chinach czy we Włoszech?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8d28cc21",
+   "metadata": {},
+   "source": [
+    "## Bibliografia"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a512c8db",
+   "id": "3bded7d0",
    "metadata": {},
    "outputs": [],
    "source": []
