o projektach AI i data science
Signed-off-by: Robert Trypuz <trypuz@kul.pl>

--- a/data_science/data_science_intro.ipynb
+++ b/data_science/data_science_intro.ipynb
@@ -97,6 +97,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1e1e8dd4",
+   "metadata": {},
+   "source": [
+    "## Etapy projektu data science\n",
+    "\n",
+    "1. Zbieranie/pozyskanie danych\n",
+    "2. Analiza danych\n",
+    "    - szukanie korelacji, interesujących związków (w procesie iteracyjnym)\n",
+    "3. Postawienie hipotezy i sugestia podjęcia działań\n",
+    "4. Wprowadzenie zmian i ponowna analiza w celu weryfikacji/falsyfikacji hipotezy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "atmospheric-paris",
    "metadata": {
     "id": "atmospheric-paris"
