--- a/uczenie_maszynowe/wprowadzenie_do_uczenia_maszynowego.ipynb
+++ b/uczenie_maszynowe/wprowadzenie_do_uczenia_maszynowego.ipynb
@@ -70,11 +70,29 @@
     "\n",
     "Uczenie maszynowe...\n",
     "\n",
-    "Płytkie uczenie maszynowe... [Introduction to Shallow Machine Learning](https://www.linkedin.com/pulse/introduction-shallow-machine-learning-ayman-mahmoud/)\n",
+    "<img src=\"../pliki_yEd/ai_ml_dl.png\" style=\"height:300px;\">\n",
     "\n",
-    "Głębokie ucznie maszynowe opiera się na sztucznych sieciach neuronowych (ang. *Artificial Neural Network*). Dziś w zasadzie zamiennie używa się terminów głęboka sieć neuronowa i sieć neuronowa.\n",
+    "### Płytkie uczenie maszynowe\n",
     "\n",
-    "<img src=\"../pliki_yEd/ai_ml_dl.png\" style=\"height:300px;\">"
+    "... [Introduction to Shallow Machine Learning](https://www.linkedin.com/pulse/introduction-shallow-machine-learning-ayman-mahmoud/)\n",
+    "\n",
+    "### Głębokie uczenie maszynowe\n",
+    "\n",
+    "Głębokie ucznie maszynowe opiera się na sztucznych sieciach neuronowych (ang. *Artificial Neural Network*). Dziś w zasadzie zamiennie używa się terminów głęboka sieć neuronowa i sieć neuronowa. Podstawowym elementem sieci neuronowej jest sztuczny neuron, którego zadaniem jest znalezienie odpowiedniej funkcji odwzorowującej wejście $X$ na wyjście $y$.\n",
+    "\n",
+    "<img src=\"../pliki_yEd/neuron.png\" style=\"height:100px;\">\n",
+    "\n",
+    "Sieć neuronowa to połączenie takich prostych neuronów:\n",
+    "\n",
+    "<img src=\"../pliki_yEd/siec_neuronowa.png\" style=\"height:400px;\">\n",
+    "\n",
+    "Można widzieć sieć neuronową jako \"black box\", której celem jest odwzorowanie wejścia $X$ na wyjęcie $y$.\n",
+    "\n",
+    "<img src=\"../pliki_yEd/siec_neuronowa2.png\" style=\"height:200px;\">\n",
+    "\n",
+    "$X$ może być dowolnym wektorem cech postaci numerycznej. Podobnie $y$, również musi być postaci liczbowej, np. $1$ będzie symbolizować popyt, a $0$ brak popytu.\n",
+    "\n",
+    "Zbiory treniongowy i testowy..."
    ]
   },
   {
@@ -142,6 +160,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0ca0cb2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2895cc0",
    "metadata": {},
    "outputs": [],
    "source": []
