--- a/organizacja_projektow_ai/organizacja_projektow_ai.ipynb
+++ b/organizacja_projektow_ai/organizacja_projektow_ai.ipynb
@@ -25,10 +25,102 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ce70b0a",
+   "metadata": {},
+   "source": [
+    "## Jakie projekty AI mają szansę powodzenia?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "72bfced3",
+   "metadata": {},
+   "source": [
+    "1. Andrew Ng wprowadził regułę mówiącą, że jeśli jakieś **zadanie zajmuje mniej niż 1 sekundę twojego myślenia**, to jest duże prawdopodobieństwo, że zostanie ono wcześniej czy później zautomatyzowane przez AI. Na przykład, rozpoznanie, czy e-mail jest spamem, zrozumienie, co ktoś do nas mówi, sprawdzenie, czy nasz smartfon nie jest uszkodzony mechanicznie, zrozumienie intencji użytkownika na podstawie tego co napisał (w ograniczonym zakresie), itp. \n",
+    "\n",
+    "2. **Duża ilość danych**, gdzie mamy wyraźnie określone wejście X i wyjście y, daje szansę na sukces (choć go nie gwarantuje). To różnica w uczeniu się maszyny i człowieka. \n",
+    "\n",
+    "AI może mieć duże problemy, gdy będziemy starać się nauczyć AI zadania skomplikowanego dodatkowo mając niewiele danych (na przykład dla danego paragrafu tekstu rozpoznanie czy zawiera on definicję czy nie). Człowiek na podstawie kilku zdjęć potrafi zrozumieć pewne zjawisko (np. jak wygląda zapalenie płuc an zdjęciu rendgenowskim) podczas, gdy maszyna potrzebuje około 10 tysięcy zdjęć.\n",
+    "\n",
+    "Dodatkowo AI może mieć problemy, gdy dane treningowe będą różnić się od danych na których model ma ostatecznie pracować (np. zdjęcia będą inaczej naświetlone, będą miały zakłócenia lub będą robione pod innym kątem). Człowiek poradziłby sobie z tym problemem lepiej niż maszyna."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e37d4964",
+   "metadata": {},
+   "source": [
+    "### W jaki sposób zrozumieć, czy projekt ma szanse powodzenia?\n",
+    "\n",
+    "1. Ocena technicznej wykonalności + ocena sensowności biznesowej. Ważny jest dialog pomiędzy ekspertem AI oraz ekspertem dziedzinowym. \n",
+    "    - Ekspert AI powinien wyłożyć jakie są dziś możliwości AI\n",
+    "    - Ekspert dziedzinowy powinien opowiedzieć o swojej dziedzinie i jakiego typu automatyzacja przyniosłaby wartość biznsową.\n",
+    "2. Skupić na automatyzacji zadań/działań niż stanowisk pracy\n",
+    "3. Zastanowić się jakie są głóne siły napędowe biznesu i jego bolączki; to mogą być dobre miejsca na AI\n",
+    "4. Duża ilość danych może być dobrym punktem startu, ale nie zawsze trzeba czekać z rozpoczęciem projektu AI, gdy będziemy meić dużo danych. Można uzyskać wyniki na niewielkich zbiorach danych."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1ce2e0e",
+   "metadata": {},
+   "source": [
+    "### Jak sprawdzić, czy projekt AI jest wart rozpoczęcia\n",
+    "\n",
+    "Ocena wykonalności technicznej\n",
+    "- czy system AI będzie wstanie osiągnąć oczykiwane rezulaty\n",
+    "- jak wiele danych potrzeba i czy jest szansa na pozyskanie tych danych\n",
+    "- analiza ram czasowych\n",
+    "\n",
+    "Ocena biznesowa\n",
+    "- czy AI obniży koszty np. poprzez automatyzację niektórych zadań\n",
+    "- czy AI zwiększy przychody\n",
+    "- AI urochomi nowy produkt lub serwis\n",
+    "\n",
+    "Ocena etyczna\n",
+    "- ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2086b92",
+   "metadata": {},
+   "source": [
+    "### Kryteria powodzenia projektu\n",
+    "\n",
+    "- dokładność w procentach, np. 99%; lub bardziej złożone miary jak czas odpowiedzi w relacji do dokładności; albo porównanie z eksperarmi dziedzinowymi\n",
+    "    - zbiór testowy, aby móc ocenić\n",
+    "    - nigdy nie oczekuj 100% (bo za mało danych, bo szum w danych)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "02b4d90d",
    "metadata": {},
    "source": [
-    "## "
+    "## Etapy projektu AI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89435978",
+   "metadata": {},
+   "source": [
+    "1. Zbieranie/pozyskiwanie danych (obrazów, plików dzwiękowych, tekstu, etc)\n",
+    "2. Trenowanie modelu \n",
+    "    - w procesie iteracyjnym do momentu, aż zostaną uzyskane oczekiwane wyniki\n",
+    "3. Wdrożenie modelu\n",
+    "4. Analiza wyników\n",
+    "    - jeśli po wrożeniu nie jest utrzymamy zadawalający poziom, należy powrócić do danych, dokonać analizy, ew. zmian i/lub uzupełnień, i na nowo dokonać treniongu modelu."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5678947d",
+   "metadata": {},
+   "source": [
+    "## Członkowie zespołu AI\n",
+    "\n"
    ]
   },
   {
