AI Transformation Playbook + role AI
Signed-off-by: Robert Trypuz <trypuz@kul.pl>

--- a/organizacja_projektow_ai/organizacja_projektow_ai.ipynb
+++ b/organizacja_projektow_ai/organizacja_projektow_ai.ipynb
@@ -17,15 +17,38 @@
     " znajdujemy instrukcję, 5 kroków, które należy wykonać, aby zmianić firmę w firmę stosującą, a może nawet oferującą, rozwiązania AI:\n",
     "\n",
     "1. Wykonaj projekt pilotażowy, aby nabrać rozpędu (ang. *Execute pilot projects to gain momentum*)\n",
+    "    - ważne, aby odnieść mały sukces na początku; można zrobić małą rzecz\n",
+    "    - zrobić coś co można ukończyć w 6-12 miesięcy\n",
+    "    - można zlecić na zawenątrz\n",
     "2. Zbuduj zespół AI wewnątrz firmy (ang. *Build an in-house AI team*)\n",
+    "    - połączyć zespół z innymi zespołami\n",
+    "    - zespół może podlegać bezpośrednio CTO, CIO, CDO lub można powołać CAIO\n",
+    "    - team AI powinien mieć swój budżet na początku, ale z czasem musi pokazać swoją wartość\n",
     "3. Zapewnij szerokie szkolenia AI (zespołowi AI, ale również menadżerom) (ang. *Provide broad AI training*)\n",
+    "    - executives i senior business leaders - wiedza czym jest AI i jakie znaczenie może mieć w firmie, strategia AI, alokacja środków (~4h)\n",
+    "    - liderzy projektów AI - ocena biznesowa i techniczna wykonalności projektów AI, alokacja środków, monitoriwanie postępów (~12h)\n",
+    "    - stażyści, przyszli inżynierowie AI - jak budować i wypuszczaś produkty AI, jak pozyskiwać dane, wykonywać projekty AI\n",
     "4. Zdefiniuj strategię AI twojej firmy (ang. *Develop an AI strategy*)\n",
-    "5. Wypracuj komunikację wewnętrzną i zewnętrzną (ang. *Develop internal and external communications*)"
+    "    - nie budujemy strategii na początku, bo nie znamy jeszcze możliwości AI, nie czujemy tego\n",
+    "    - jak wykorzystać AI, aby zyskać przewagę w firmie\n",
+    "    - utworzyć strategię zgodną z *Virtuous Cycle of AI*: **lepszy produkt -> więcej użytkowników -> więcej danych -> lepszy produkt**\n",
+    "    - utworzyć strategię dot. danych\n",
+    "        - jak pozyskiwać dane\n",
+    "        - łączenie danych (unifier data warehouse)\n",
+    "    - jak połączyć AI z istniejącymi rozwiązaniami\n",
+    "    - zastanowić się w jaki sposób AI może ulepszyć istniejące strategie (zwiąkszyć sprzedawalność, zmniejszyć koszty, etc)\n",
+    "        \n",
+    "5. Wypracuj komunikację wewnętrzną i zewnętrzną (ang. *Develop internal and external communications*)\n",
+    "    - komunikacja z inwesrorami\n",
+    "    - konunikacja z administracją rządową\n",
+    "    - edukacja użytkowników\n",
+    "    - rekrutacja\n",
+    "    - konunikacja wewnątrz firmy; wyjaśnianie możliwości, rozwiewanie lęków"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3ce70b0a",
+   "id": "c6bdc208",
    "metadata": {},
    "source": [
     "## Jakie projekty AI mają szansę powodzenia?"
@@ -33,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72bfced3",
+   "id": "76310d1c",
    "metadata": {},
    "source": [
     "1. Andrew Ng wprowadził regułę mówiącą, że jeśli jakieś **zadanie zajmuje mniej niż 1 sekundę twojego myślenia**, to jest duże prawdopodobieństwo, że zostanie ono wcześniej czy później zautomatyzowane przez AI. Na przykład, rozpoznanie, czy e-mail jest spamem, zrozumienie, co ktoś do nas mówi, sprawdzenie, czy nasz smartfon nie jest uszkodzony mechanicznie, zrozumienie intencji użytkownika na podstawie tego co napisał (w ograniczonym zakresie), itp. \n",
@@ -47,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e37d4964",
+   "id": "0cadba04",
    "metadata": {},
    "source": [
     "### W jaki sposób zrozumieć, czy projekt ma szanse powodzenia?\n",
@@ -62,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1ce2e0e",
+   "id": "745c0d78",
    "metadata": {},
    "source": [
     "### Jak sprawdzić, czy projekt AI jest wart rozpoczęcia\n",
@@ -83,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2086b92",
+   "id": "3b0be20d",
    "metadata": {},
    "source": [
     "### Kryteria powodzenia projektu\n",
@@ -103,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89435978",
+   "id": "861133af",
    "metadata": {},
    "source": [
     "1. Zbieranie/pozyskiwanie danych (obrazów, plików dzwiękowych, tekstu, etc)\n",
@@ -116,11 +139,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5678947d",
+   "id": "7d68505d",
    "metadata": {},
    "source": [
     "## Członkowie zespołu AI\n",
-    "\n"
+    "\n",
+    "- Software Engineer - do zadań typowych IT\n",
+    "- Machine Learning Engineer - tworzenie algorytmów ML, uczenie\n",
+    "- Machine Learning Researcher - analiza literatury i nowinek\n",
+    "- Applied Machine Learning Scientist - łączy dwie powyższe funkcje\n",
+    "- Data Scientist - analiza danych, wydobywanie wiedzy z danych, tworzenie prezentacji\n",
+    "- Date Engineer - organizacja danych, ich bezpieczeństwo i łatwy dostęp\n",
+    "- AI Product Manager - decyduje co jest wykonalne, co mamy tworzyć i co ma wartość dla firmy"
    ]
   },
   {
