organizacja projektów ai - obszary zastosowań
Signed-off-by: Robert Trypuz <trypuz@kul.pl>

--- a/organizacja_projektow_ai/organizacja_projektow_ai.ipynb
+++ b/organizacja_projektow_ai/organizacja_projektow_ai.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6bdc208",
+   "id": "97ec12f0",
    "metadata": {},
    "source": [
     "## Jakie projekty AI mają szansę powodzenia?"
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76310d1c",
+   "id": "689e0bd6",
    "metadata": {},
    "source": [
     "1. Andrew Ng wprowadził regułę mówiącą, że jeśli jakieś **zadanie zajmuje mniej niż 1 sekundę twojego myślenia**, to jest duże prawdopodobieństwo, że zostanie ono wcześniej czy później zautomatyzowane przez AI. Na przykład, rozpoznanie, czy e-mail jest spamem, zrozumienie, co ktoś do nas mówi, sprawdzenie, czy nasz smartfon nie jest uszkodzony mechanicznie, zrozumienie intencji użytkownika na podstawie tego co napisał (w ograniczonym zakresie), itp. \n",
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cadba04",
+   "id": "5c242692",
    "metadata": {},
    "source": [
     "### W jaki sposób zrozumieć, czy projekt ma szanse powodzenia?\n",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "745c0d78",
+   "id": "374494e2",
    "metadata": {},
    "source": [
     "### Jak sprawdzić, czy projekt AI jest wart rozpoczęcia\n",
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b0be20d",
+   "id": "3156a18f",
    "metadata": {},
    "source": [
     "### Kryteria powodzenia projektu\n",
@@ -114,6 +114,20 @@
     "- dokładność w procentach, np. 99%; lub bardziej złożone miary jak czas odpowiedzi w relacji do dokładności; albo porównanie z eksperarmi dziedzinowymi\n",
     "    - zbiór testowy, aby móc ocenić\n",
     "    - nigdy nie oczekuj 100% (bo za mało danych, bo szum w danych)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bf57d722",
+   "metadata": {},
+   "source": [
+    "### Pamiętaj\n",
+    "\n",
+    "1. AI nie rozwiąże wszystkich problemów. Techniczna i biznasowa ocena wykonalności jest bardzo ważna.\n",
+    "2. Aby znaleźć ciekawe i wykonalne zastosowanie AI w firmi trzeba łączyć ekspertów AI ze specjalistami od biznesu\n",
+    "3. Projekty AI zwykle nie dają oczekiwanych wyników za pierwszym razem; od samego początku miej świadomość procesu iteracyjnego\n",
+    "4. Postaw wymagania projektowi AI za pomocą kamieni milowych, czasu oraz KPIs\n",
+    "5. Zacznij projekt AI z zasobami jakie masz. Kolejne projekty będą lepsze od poprzednich!"
    ]
   },
   {
@@ -126,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861133af",
+   "id": "cf18ca93",
    "metadata": {},
    "source": [
     "1. Zbieranie/pozyskiwanie danych (obrazów, plików dzwiękowych, tekstu, etc)\n",
@@ -139,7 +153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d68505d",
+   "id": "9c4978f3",
    "metadata": {},
    "source": [
     "## Członkowie zespołu AI\n",
@@ -151,6 +165,56 @@
     "- Data Scientist - analiza danych, wydobywanie wiedzy z danych, tworzenie prezentacji\n",
     "- Date Engineer - organizacja danych, ich bezpieczeństwo i łatwy dostęp\n",
     "- AI Product Manager - decyduje co jest wykonalne, co mamy tworzyć i co ma wartość dla firmy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bddf165",
+   "metadata": {},
+   "source": [
+    "## Obszary zastosowań AI\n",
+    "\n",
+    "1. widzenie komputerowe (*computer vision*)\n",
+    "    - klasyfikacja obrazów (*image classification*, *object recognition*)\n",
+    "    - rozpoznawanie obiektów na zdjęciu (*face recognition*)\n",
+    "    - wykrywanie obiektów (*object detection*)\n",
+    "    - segmentacja obrazów (*image segmentation*)\n",
+    "    - śledzenie obiektów w wideo (*tracking*)\n",
+    "    \n",
+    "2. przetwarzanie języka naturalnego (*natural language processing*)\n",
+    "    - klasyfikacja tekstu (*text classification*)\n",
+    "        - analiza sentymentu\n",
+    "    - wyszukiwanie informacji (*information retrival*)\n",
+    "    - rozpoznawanie nazw własnych (*name entity recognition*)\n",
+    "    - tłumaczenie maszynowe (*machine translation*)\n",
+    "    - przygotowanie tekstu do innych działań (*preprocessing*): parsowanie, rozpoznawanie części mowy (*parsing*, *part-of-speech tagging*)\n",
+    "\n",
+    "3. przetwarzanie mowy\n",
+    "    - rozpoznawanie mowy (*speech recognition*); speech2text\n",
+    "    - rozpoznawanie słowa ... (*trigger word detection*, *wakeword detection*)\n",
+    "    - speaker id - kto mówi\n",
+    "    - text2speech (*speech synthesis*)\n",
+    "    \n",
+    "4. robotyka\n",
+    "    - percepcja\n",
+    "    - planowanie działania\n",
+    "    - wykonywanie i kontrola działania\n",
+    "    \n",
+    "5. dane strukturalne (tabele)\n",
+    "    - predykacja\n",
+    "\n",
+    "6. dane niestrukturalne\n",
+    "    - klasteryzacja, analiza skupień (clustering)\n",
+    "\n",
+    "7. transfer learning (głównie używana w computer vision)\n",
+    "\n",
+    "8. reinforcement learning (głównie gry)\n",
+    "    - wymaga dużo danych\n",
+    "\n",
+    "9. GANs (Generative Adversarial Network)\n",
+    "    - tworzy nowe rzeczy z istniejących (np. zdjęcia)\n",
+    "\n",
+    "10. Grafy wiedzy"
    ]
   },
   {
